; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wan/extr_hdlc_fr.c_get_dev_p.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wan/extr_hdlc_fr.c_get_dev_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.pvc_device = type { %struct.net_device*, %struct.net_device* }

@ARPHRD_ETHER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.net_device** (%struct.pvc_device*, i32)* @get_dev_p to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.net_device** @get_dev_p(%struct.pvc_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device**, align 8
  %4 = alloca %struct.pvc_device*, align 8
  %5 = alloca i32, align 4
  store %struct.pvc_device* %0, %struct.pvc_device** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @ARPHRD_ETHER, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load %struct.pvc_device*, %struct.pvc_device** %4, align 8
  %11 = getelementptr inbounds %struct.pvc_device, %struct.pvc_device* %10, i32 0, i32 1
  store %struct.net_device** %11, %struct.net_device*** %3, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load %struct.pvc_device*, %struct.pvc_device** %4, align 8
  %14 = getelementptr inbounds %struct.pvc_device, %struct.pvc_device* %13, i32 0, i32 0
  store %struct.net_device** %14, %struct.net_device*** %3, align 8
  br label %15

15:                                               ; preds = %12, %9
  %16 = load %struct.net_device**, %struct.net_device*** %3, align 8
  ret %struct.net_device** %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
